kubernetes-manifests/admin-page/admin-page-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-page
  labels:
    app: admin-page
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-page
      tier: frontend
  template:
    metadata:
      name: admin-page
      labels:
        app: admin-page
        tier: frontend
    spec:
      containers:
        - name: admin-page
          image: ghcr.io/liberty52/liberty52-admin-page:dev-v-2023.10.09-100851
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: ghcrcred
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: admin-page
    tier: frontend
  name: admin-page
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
  selector:
    app: admin-page
    tier: frontend
